# kindyn

./: .gitignore  CMakeLists.txt  CableLengthController_plugin.xml  CableLengthVelocityController_plugin.xml  ForcePositionController_plugin.xml  LICENSE  README.md  TorquePositionController_plugin.xml  package.xml
cmake/: FindqpOASES.cmake
include/kindyn/: CableForce_NLP.hpp  EigenExtension.hpp  GymServices.h  RunningAverage.hpp  cable.hpp  gymFunctions.h  kinematics.hpp  robot.hpp  robot.hpp.gch  robot_new.hpp  vrpuppet.hpp
include/kindyn/controller/: CartesianMotionController.h  PDController.h  SpatialPDController.h  cardsflow_command_interface.hpp  cardsflow_state_interface.hpp
include/kindyn/filter/: joints_kalmanfilter.h  nonlinearanalyticconditionalgaussianjointangles.h
launch/: joystick.launch  oxford.launch  puppet.launch  robot.launch
scripts/: axis_test.py  capture_trajectory.py  captured_trajectory_ik.json  dynamicsComputationTutorial.py  hand_test.py  handshake.py  head_joystick_control.py  head_joystick_control2.py  head_quick_test.py  head_random.py  head_test.py  idle_arms.py  kalman.py  kinematic_test.py  mable_moves.py  motor_test.py  muscle_legth_error.py  pedal_simulation.py  shoulder_test.py  sinusoid.py  spawn_controllers.bash  trajectoryControl.py  visualize_extjs.py  visualize_velocity.py  wrist_test.py
src/: .robot.cpp.swp  CableForce_NLP.cpp  Doxyfile  EigenExtension.cpp  GymServices.cpp  README.md  capture_trajectory.py  captured_trajectory_2_ik.json  captured_trajectory_ik.json  gymFunctions.cpp  interpolation.py  joint_angle_velocity_factor_test.py  kinematics.cpp  main_node.cpp  nlopt_test.cpp  pedal_simulation.py  pedal_simulation_interpolation.py  pedal_simulation_interpolation_lennard.py  pedal_simulation_interpolation_temp.py  pedal_simulation_old_trajectory.py  robot.cpp  robot.cpp.save  robot_new.cpp  steering_simulation.py  steering_test.py  test_idyntree.cpp  test_ipopt.cpp  test_robot.cpp  velocity_test.py  vrpuppet.cpp
src/capture_trajectory/: capture_pedal_trajectory_two_frames.py  capture_steering_trajectory.py  capture_trajectory.py  captured_trajectory.json  captured_trajectory_ik.json  captured_trajectory_two_frames.json  compute_steering_path.py  interpolate_multiple_steering.py  multiple_steering_trajectories.py  old_captured_trajectory.json  pedal_simulation.py  roboython.py  saved_coefficients.json  steering_trajectory.json  steering_trajectory_test.py
src/controller/: CartesianMotionController.cpp  cableLengthController.cpp  cableLengthVelocityController.cpp  cardsflow_command_interface.cpp  cardsflow_state_interface.cpp  forcePositionController.cpp  torquePositionController.cpp
src/documentation/: open_doc.sh
src/documentation/html/: capture__pedal__trajectory_8py.html  capture__pedal__trajectory_8py.js  capture__pedal__trajectory_8py_source.html  capture__pedal__trajectory__two__frames_8py.html  capture__steering__trajectory_8py.html  compute__steering__path_8py.html  compute__steering__path_8py.js  compute__steering__path_8py_source.html  dir_55611d0e11b13156cd1fc02161b627d7.html  dir_55611d0e11b13156cd1fc02161b627d7.js  dir_776cf29946319c21284a2db6d5efbfce.html  dir_776cf29946319c21284a2db6d5efbfce.js  dir_84dad581dad0dcb55fbe521698ca009e.html  dir_84dad581dad0dcb55fbe521698ca009e.js  dir_8c58eac03863ded8b669aa51af8a4621.html  dir_8c58eac03863ded8b669aa51af8a4621.js  dir_9c1373f244d8512844d72dfae4624b70.html  dir_9c1373f244d8512844d72dfae4624b70.js  dir_ca1dc8027cad0a97d63ac33554c05665.html  dir_ca1dc8027cad0a97d63ac33554c05665.js  dir_f078eff721ecd3a9e5b8f72b1eb6bd2e.html  dir_f078eff721ecd3a9e5b8f72b1eb6bd2e.js  files.html  files_dup.js  graph_legend.html  index.html  interpolate__multiple__steering_8py.html  interpolate__steering_8py.html  joint__angle__velocity__factor__test_8py.html  joint__angle__velocity__factor__test_8py.js  joint__angle__velocity__factor__test_8py_source.html  menudata.js  multiple__steering__trajectories_8py.html  namespacecapture__pedal__trajectory.html  namespacecapture__pedal__trajectory__two__frames.html  namespacecapture__pedal__trajectory_a00dff2df306072da5d299eba96e79b4b_icgraph.map  namespacecapture__pedal__trajectory_a00dff2df306072da5d299eba96e79b4b_icgraph.md5  namespacecapture__pedal__trajectory_a54694682225635fb5a735f159e9f059c_cgraph.map  namespacecapture__pedal__trajectory_a54694682225635fb5a735f159e9f059c_cgraph.md5  namespacecapture__pedal__trajectory_a54694682225635fb5a735f159e9f059c_icgraph.map  (+355 more)
src/documentation/latex/: capture__pedal__trajectory_8py.tex  capture__pedal__trajectory__two__frames_8py.tex  capture__steering__trajectory_8py.tex  compute__steering__path_8py.tex  dir_55611d0e11b13156cd1fc02161b627d7.tex  dir_776cf29946319c21284a2db6d5efbfce.tex  dir_84dad581dad0dcb55fbe521698ca009e.tex  dir_8c58eac03863ded8b669aa51af8a4621.tex  dir_9c1373f244d8512844d72dfae4624b70.tex  dir_ca1dc8027cad0a97d63ac33554c05665.tex  dir_f078eff721ecd3a9e5b8f72b1eb6bd2e.tex  files.tex  interpolate__multiple__steering_8py.tex  interpolate__steering_8py.tex  (+169 more)
src/filter/: joints_kalmanfilter.cpp  nonlinearanalyticconditionalgaussianjointangles.cpp
src/pedaling/: finals_simulation_pedaling.py  pedal_simulation.py  pedal_simulation_interpolation.py  pedal_simulation_interpolation_lennard.py  pedal_simulation_left_leg.py  pedal_simulation_left_leg_fk_pos.py  pedal_simulation_old_trajectory.py
src/robots/: .msj_platform.cpp.swp  VRpuppet.cpp  arm_left.cpp  arm_right.cpp  arm_right_testbed.cpp  ciie.cpp  elbow_left.cpp  elbow_right.cpp  exohaptic.cpp  head_testbed.cpp  human.cpp  msj_platform.cpp  musc_shoulder.cpp  rickshaw_pedaling.cpp  rikshaw.cpp  rikshaw_new_hands.cpp  robot_configuration_estimator.cpp  roboy2.cpp  roboy_arcade_maschine.cpp  roboy_ciie.cpp  roboy_head.cpp  roboy_icecream.cpp  roboy_upper_body.cpp  roboy_xylophone.cpp  shoulder_testbed.cpp  test_robot.cpp  theClaw.cpp  upper_body.cpp  vrpuppet_upper_body.cpp  vrsphere.cpp  yatr.cpp
src/steering/: steering_simulation.py
src/utilities/: interpolation.py  kp_kp.py  state_machine.py  test_idyntree.cpp
(+101 files in other folders)
